Version 3.2.7, released ????-??-??
----------------------------------
- Include "strategy" entry in on-the-fly generated "manifest.ini" during the "package" phase
- Relocate "xp:ignite" downloaded deps to "/lib/ignite" to avoid conflicts with other possible existing libs
    (mrosoiu)


Version 3.2.6, released 2012-12-10
----------------------------------
- Bugfix: When packing apps, add "lib/bootstrap" entry to the on-the-fly generated "project.pth"
  (mrosoiu)


Version 3.2.5, released 2012-12-10
----------------------------------
- Add ${xp.svn-deploy.legacyVolatileTagName} property to alter the value of ${xp.svn-deploy.volatileTagName}
- Rename "svn-deploy" goal's properties to ${xp.svn-deploy.xxx}
- Add support for running integrations tests from "src/it"
  - Add "integration-test-compile" and "integration-test" phases
- Rename "libs" to "lib" in the generated artifact
- Move XP-Framework artifacts to "libs/runtime" in the generated artifact
- Move XP-Framework bootstrap to "libs/bootstrap" in the generated artifact
- Move "patch" artifacts at the top of the "*.pth" entries list rather than using the "!" marker
- Add "target/xsl" directory to classpath when running tests; if exists
  (mrosoiu)


Version 3.2.4, released 2012-12-07
----------------------------------
- Fix xar artifact description: it does not include dependencies
  (mrosoiu)


Version 3.2.3, released 2012-12-06
----------------------------------
- Don't set USE_XP env variable when this.use_xp == null
- Pack lib resources (src/main/xsl) to artifact archive root (/)
  (mrosoiu)


Version 3.2.2, released 2012-12-04
----------------------------------
- Handle Windows-only and Un*x-only PHP extensions
- Reformat ChangeLog
  (mrosoiu)

- Set USE_XP env variable to overwrite classpath defined in ~/.xp/xp.ini - see issue #4
  (mrosoiu, kiesel)


Version 3.2.1, released 2012-12-03
----------------------------------
- Fix broken xar lifecycle mappings (lifecycle.xml and components.xml)